TASK - 3471(Vendor app Login and email otp screen UI changes)
- Login and email otp screen UI changed.
- Implemented progress bar on notification page when delete single notification.
- Implemented common progress bar on login, emailOtp and notification pages.

--- a/app/src/main/res/layout/fragment_active_notification.xml
+++ b/app/src/main/res/layout/fragment_active_notification.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="activenotificationViewModel"
             type="com.smf.events.ui.notification.activenotification.ActiveNotificationViewModel" />
@@ -41,16 +43,9 @@
             app:layout_constraintTop_toTopOf="@+id/active_notification_recycler"
             app:layout_constraintVertical_bias="0.3" />
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:indeterminateDrawable="@drawable/custom_progrss_bar"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <include
+            layout="@layout/progressbar"
+            app:visibility="@{activenotificationViewModel.showLoading.booleanValue ? View.VISIBLE : View.GONE}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
