--- a/app/src/main/res/layout/fragment_email_otp.xml
+++ b/app/src/main/res/layout/fragment_email_otp.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="otpviewmodel"
             type="com.smf.events.ui.emailotp.EmailOTPViewModel" />
@@ -13,17 +15,24 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.emailotp.EmailOTPFragment">
+        tools:context=".MainActivity">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout4"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_120sdp"
             android:background="@color/theme_color"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline_top"
             app:layout_constraintVertical_bias="0.0">
 
             <ImageView
@@ -34,7 +43,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.45" />
+                app:layout_constraintVertical_bias="0.45"
+                tools:ignore="ContentDescription" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -43,10 +53,10 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_100sdp"
             android:background="@drawable/theme_corner_radius_white_bacground"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline_top"
             app:layout_constraintVertical_bias="0.0">
 
             <TextView
@@ -67,11 +77,12 @@
 
             <TextView
                 android:id="@+id/textView9"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_18sdp"
-                android:layout_marginEnd="@dimen/_18sdp"
+                android:layout_marginHorizontal="@dimen/_18sdp"
                 android:fontFamily="@font/mulish_semi_bold"
+                android:gravity="fill_horizontal|start"
+                android:maxLines="2"
                 android:text="@string/please_enter_your_verification_code_sent_your_email"
                 android:textColor="@color/gray_text"
                 android:textSize="@dimen/_13ssp"
@@ -91,38 +102,12 @@
                 android:gravity="center"
                 android:text="@string/enter_otp_sent_to_your_email"
                 android:textColor="@color/gray_text"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="@dimen/_12ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView9"
                 app:layout_constraintVertical_bias="0.050" />
-
-
-            <!--            <com.chaos.view.PinView-->
-            <!--                android:id="@+id/otpemail"-->
-            <!--                style="@style/PinWidget.PinView"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_gravity="center"-->
-            <!--                android:cursorVisible="true"-->
-            <!--                android:fontFamily="@font/mulish_semi_bold"-->
-            <!--                android:inputType="number"-->
-            <!--                android:text="@={otpviewmodel.userOtpNumber}"-->
-            <!--                app:hideLineWhenFilled="false"-->
-            <!--                app:itemCount="4"-->
-            <!--                app:itemHeight="@dimen/_40sdp"-->
-            <!--                app:itemRadius="@dimen/_8sdp"-->
-            <!--                app:itemSpacing="@dimen/_8sdp"-->
-            <!--                app:itemWidth="@dimen/_40sdp"-->
-            <!--                -->
-            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--                app:layout_constraintEnd_toEndOf="parent"-->
-            <!--                app:layout_constraintStart_toStartOf="parent"-->
-            <!--                app:layout_constraintTop_toBottomOf="@+id/textView10"-->
-            <!--                app:layout_constraintVertical_bias="0.04"-->
-            <!--                app:lineWidth="@dimen/_1sdp" />-->
-
 
             <EditText
                 android:id="@+id/otp1ed"
@@ -135,66 +120,56 @@
                 android:selectAllOnFocus="true"
                 android:text="@={otpviewmodel.userOtp1}"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_15ssp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.23"
+                android:textSize="@dimen/_14ssp"
+                app:layout_constraintEnd_toStartOf="@+id/otp2ed"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <EditText
                 android:id="@+id/otp2ed"
                 style="@style/LoginSecurityCode"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:imeOptions="actionNext"
                 android:inputType="number"
                 android:nextFocusRight="@+id/otp3ed"
                 android:selectAllOnFocus="true"
                 android:text="@={otpviewmodel.userOtp2}"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_15ssp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                android:textSize="@dimen/_14ssp"
+                app:layout_constraintEnd_toStartOf="@+id/otp3ed"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/otp1ed"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="@+id/otp1ed" />
 
             <EditText
                 android:id="@+id/otp3ed"
                 style="@style/LoginSecurityCode"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:imeOptions="actionNext"
                 android:inputType="number"
                 android:nextFocusRight="@+id/otp4ed"
                 android:selectAllOnFocus="true"
                 android:text="@={otpviewmodel.userOtp3}"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_15ssp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                android:textSize="@dimen/_14ssp"
+                app:layout_constraintEnd_toStartOf="@+id/otp4ed"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/otp2ed"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="@+id/otp2ed" />
 
             <EditText
                 android:id="@+id/otp4ed"
                 style="@style/LoginSecurityCode"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:inputType="number"
                 android:maxLength="1"
                 android:selectAllOnFocus="true"
                 android:text="@={otpviewmodel.userOtp4}"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_15ssp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="@dimen/_14ssp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/otp3ed"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="@+id/otp3ed" />
 
             <LinearLayout
                 android:id="@+id/linearLayout4"
@@ -216,7 +191,7 @@
                     android:fontFamily="@font/mulish_regular"
                     android:text="@string/click_resend_in"
                     android:textColor="@color/gray_text"
-                    android:textSize="@dimen/_11ssp" />
+                    android:textSize="@dimen/_12ssp" />
 
                 <TextView
                     android:id="@+id/otp_timer"
@@ -226,7 +201,7 @@
                     android:fontFamily="@font/mulish_regular"
                     android:text="@string/_00_30"
                     android:textColor="@color/gray_text"
-                    android:textSize="@dimen/_11ssp" />
+                    android:textSize="@dimen/_12ssp" />
 
             </LinearLayout>
 
@@ -265,35 +240,33 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/submitBtn"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_33sdp"
-                android:layout_gravity="center"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_height="@dimen/_34sdp"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_55sdp"
                 android:background="@drawable/custom_button_corner_ok"
                 android:fontFamily="@font/mulish_bold"
                 android:text="@string/submit"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_11ssp"
+                android:textSize="@dimen/_13ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/otp_resend"
-                app:layout_constraintVertical_bias="0.75" />
+                app:layout_constraintVertical_bias="1.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
+        <include
+            layout="@layout/progressbar"
+            app:visibility="@{otpviewmodel.showLoading.booleanValue ? View.VISIBLE : View.GONE}" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminateDrawable="@drawable/custom_progrss_bar"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
