--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,6 +16,7 @@
     <color name="dark_gray">#9F9F9F</color>
     <color name="blue">#2196F3</color>
     <color name="lite_gray">#E1E1E1</color>
+    <color name="semi_transparent">#32B5B5B5</color>
     // 2350
     <color name="button_blue">#556cd4</color>
     // 2350
