--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,5 +59,6 @@
     <color name="quote_details_check_black">#B5232323</color>
     <color name="text_gray_color">#A6171313</color>
     <color name="snack_background">#F3F0F0</color>
+    <color name="view_line_gray">#E1E0E0</color>
 
 </resources>
