--- a/app/src/main/res/layout/detailscardview.xml
+++ b/app/src/main/res/layout/detailscardview.xml
@@ -331,7 +331,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="9dp"
             android:background="@color/view_line_gray"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/quote_status" />
