--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -60,5 +60,6 @@
     <color name="text_gray_color">#A6171313</color>
     <color name="snack_background">#F3F0F0</color>
     <color name="view_line_gray">#E1E0E0</color>
+    <color name="rating_bar_orange">#FA693B</color>
 
 </resources>
