TASK - 3503(Vendor app UI changes(Dashboard, Notification and Availability slots))
- UI changes done based on existing wireframe(Dashboard, Notification and Availability slots).
- Implemented ssp for text size on Notification and Availability slots pages.

--- a/app/src/main/res/layout/booked_event_list_recycler_view_item.xml
+++ b/app/src/main/res/layout/booked_event_list_recycler_view_item.xml
@@ -23,10 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_6sdp"
         android:layout_marginTop="@dimen/_2sdp"
-        android:fontFamily="@font/mulish_medium"
+        android:fontFamily="@font/mulish_regular"
         android:text="@string/aug_26"
-        android:textSize="@dimen/_11sdp"
-        android:textColor="@color/text_gray_color"
+        android:textColor="@color/dark_gray_text"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintBottom_toBottomOf="@+id/image_view_12_3am"
         app:layout_constraintStart_toEndOf="@+id/image_view_12_3am"
         app:layout_constraintTop_toTopOf="@+id/image_view_12_3am" />
@@ -36,10 +36,10 @@
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_25sdp"
-        android:fontFamily="@font/mulish_medium"
+        android:fontFamily="@font/mulish_regular"
         android:text="@string/saras_birthday"
-        android:textSize="@dimen/_11sdp"
-        android:textColor="@color/text_gray_color"
+        android:textColor="@color/gray_text"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintBottom_toBottomOf="@+id/event_date_display"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/event_date_display"
