--- a/app/src/main/res/layout/fragment_actions_and_status.xml
+++ b/app/src/main/res/layout/fragment_actions_and_status.xml
@@ -38,7 +38,7 @@
             android:fontFamily="@font/mulish_medium"
             android:hint="@string/_0_pending_items"
             android:textSize="@dimen/_11sdp"
-            android:textColor="@color/text_gray_color"
+            android:textColor="@color/light_gray_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
             android:fontFamily="@font/mulish_medium"
             android:hint="@string/_0_status"
             android:textSize="@dimen/_11sdp"
-            android:textColor="@color/text_gray_color"
+            android:textColor="@color/light_gray_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
