--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -31,10 +31,10 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_13sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
-                android:fontFamily="@font/mulish_bold"
+                android:fontFamily="@font/mulish_semi_bold"
                 android:text="@string/calendar"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_17sdp"
+                android:textSize="@dimen/_16ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
