--- a/app/src/main/res/layout/notification_card_view.xml
+++ b/app/src/main/res/layout/notification_card_view.xml
@@ -2,7 +2,6 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/notification_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -32,7 +31,7 @@
             android:gravity="end"
             android:text="@string/_10_may_2022_6_10_am"
             android:textColor="@color/text_gray_color"
-            android:textSize="@dimen/_10sdp"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -71,12 +70,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:fontFamily="@font/mulish_medium"
             android:text="@string/bid_won"
             android:textColor="@color/black"
-            android:textSize="@dimen/_12sdp"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -94,7 +93,7 @@
             android:fontFamily="@font/mulish_regular"
             android:text="@string/you_have_won_bid_for_catering_service_fork_spoon_catering"
             android:textColor="@color/text_gray_color"
-            android:textSize="@dimen/_10sdp"
+            android:textSize="@dimen/_10ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
