--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_12sdp"
-                android:fontFamily="@font/mulish_bold"
+                android:fontFamily="@font/mulish_semi_bold"
                 android:text="@string/notifications"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_16ssp"
@@ -67,6 +67,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:background="@color/white"
+            android:fontFamily="@font/mulish_medium"
             android:textSize="@dimen/_14ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,13 +101,15 @@
             android:id="@+id/clear_all_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_5sdp"
-            android:fontFamily="@font/mulish_regular"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:fontFamily="@font/mulish_medium"
             android:text="@string/clear_all"
             android:textColor="@color/black"
             android:textSize="@dimen/_13ssp"
             app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
             app:layout_constraintEnd_toStartOf="@+id/close_all_btn"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/tabLayout"
             app:layout_constraintTop_toTopOf="@+id/tabLayout" />
 
         <FrameLayout
