--- a/app/src/main/res/layout/activity_schedule_managment.xml
+++ b/app/src/main/res/layout/activity_schedule_managment.xml
@@ -38,13 +38,12 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-
                 <TextView
                     android:id="@+id/switch_btn_tx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/mulish_regular"
                     android:gravity="end"
                     android:visibility="invisible"
                     android:text="@string/switch_to_modify_slots_availability"
