--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -180,7 +180,7 @@
                                     android:id="@+id/container_main"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_marginTop="@dimen/_8sdp"
+                                    android:layout_marginTop="@dimen/_15sdp"
                                     android:orientation="vertical"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
@@ -312,7 +312,7 @@
                             android:layout_marginTop="@dimen/_13sdp"
                             android:fontFamily="@font/mulish_bold"
                             android:text="@string/upcoming_event"
-                            android:textColor="#52A1FC"
+                            android:textColor="@color/light_blue_text"
                             android:textSize="@dimen/_14sdp"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/spinner_action" />
