--- a/app/src/main/res/layout/fragment_time_slots_expandable_list.xml
+++ b/app/src/main/res/layout/fragment_time_slots_expandable_list.xml
@@ -37,9 +37,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_40sdp"
+            android:fontFamily="@font/mulish_medium"
             android:text="@string/no_events_available"
-            android:textSize="@dimen/_13sdp"
             android:textColor="@color/gray_text"
+            android:textSize="@dimen/_12ssp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
