--- a/app/src/main/res/layout/time_slot_list.xml
+++ b/app/src/main/res/layout/time_slot_list.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/time_slot_list_layout"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 
     <LinearLayout
         android:id="@+id/layout_linear_12_3am"
@@ -33,8 +33,8 @@
 
             <ImageView
                 android:id="@+id/image_view_12_3am"
-                android:layout_width="@dimen/_22sdp"
-                android:layout_height="@dimen/_22sdp"
+                android:layout_width="@dimen/_24sdp"
+                android:layout_height="@dimen/_24sdp"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:contentDescription="@string/icon"
                 android:src="@drawable/booked"
@@ -67,14 +67,14 @@
 
                 <TextView
                     android:id="@+id/time_slot_12_3am"
-                    android:layout_width="@dimen/_100sdp"
+                    android:layout_width="@dimen/_110sdp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_18sdp"
-                    android:fontFamily="@font/mulish_medium"
+                    android:fontFamily="@font/mulish_regular"
                     android:text="@string/_12am_3am"
-                    android:textColor="@color/text_gray_color"
-                    android:textSize="@dimen/_10sdp" />
+                    android:textColor="@color/dark_gray_text"
+                    android:textSize="@dimen/_13ssp" />
 
                 <TextView
                     android:id="@+id/address_12_3am"
@@ -82,10 +82,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_18sdp"
-                    android:fontFamily="@font/mulish_medium"
-                    android:textColor="@color/text_gray_color"
+                    android:fontFamily="@font/mulish_bold"
                     android:text="@string/available"
-                    android:textSize="@dimen/_10sdp" />
+                    android:textColor="@color/gray_text"
+                    android:textSize="@dimen/_11ssp" />
 
             </LinearLayout>
 
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:layout_marginTop="@dimen/_10sdp" />
 
         </LinearLayout>
 
@@ -107,9 +107,9 @@
         android:paddingTop="@dimen/_40sdp"
         android:paddingBottom="@dimen/_40sdp"
         android:text="@string/no_events_available"
-        android:textSize="@dimen/_11sdp"
+        android:textColor="@color/gray_text"
+        android:textSize="@dimen/_12ssp"
         android:visibility="gone"
-        android:textColor="@color/text_gray_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,8 +119,8 @@
         android:id="@+id/progress_bar_child"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:indeterminateDrawable="@drawable/custom_progrss_bar"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
