--- a/app/src/main/res/layout/time_slot_title_collapse.xml
+++ b/app/src/main/res/layout/time_slot_title_collapse.xml
@@ -36,10 +36,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/mulish_semi_bold"
             android:text="@string/aug_14"
             android:textColor="@color/white"
-            android:textSize="@dimen/_11sdp"
+            android:textSize="@dimen/_13ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -48,8 +48,8 @@
 
         <ImageView
             android:id="@+id/plus_icon"
-            android:layout_width="@dimen/_14sdp"
-            android:layout_height="@dimen/_14sdp"
+            android:layout_width="@dimen/_15sdp"
+            android:layout_height="@dimen/_15sdp"
             android:layout_marginEnd="20dp"
             android:contentDescription="@string/icon"
             app:layout_constraintBottom_toBottomOf="@+id/title_date_textView"
