--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -39,14 +39,15 @@
     <style name="CustomTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/mulish_semi_bold</item>
+        <item name="android:fontFamily">@font/mulish_regular</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
     </style>
 
     // 3103 - Notification Custom Text Appearance
 
     <style name="CustomTextAppearanceNotification" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
-        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/mulish_semi_bold</item>
     </style>
